[package]
name = "nytcooking-scraper"
version = "0.1.0"
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.13.1"
reqwest = "0.10.4"

[dependencies.tokio]
version = "0.2"
features = ["macros"]
